--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           docker push $REPOSITORY_URI:latest
 
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@main
         with:
           host: ${{ secrets.ec2-13-235-248-9.ap-south-1.compute.amazonaws.com }}
           username: ec2-user
