--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,32 +16,26 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Log in to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          region: ${{ secrets.AWS_EC2_REGION }}
-          mask-password: false
-          registry-type: private
-          skip-logout: false
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push Docker image
         id: build-image
         run: |
-          REPOSITORY_URI=${{ secrets.AWS_EC2_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_EC2_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}
-          docker build -t $REPOSITORY_URI:latest .
-          docker push $REPOSITORY_URI:latest
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest .
+          docker push ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.AWS_EC2_IP }}
-          username: ec2-user
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.AWS_EC2_KEY }}
           script: |
-            REPOSITORY_URI=${{ secrets.AWS_EC2_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_EC2_REGION }}.amazonaws.com/${{ secrets.AWS_ECR_REPOSITORY }}
-            $(aws ecr get-login-password --region ${{ secrets.AWS_EC2_REGION }} | docker login --username AWS --password-stdin $REPOSITORY_URI)
-            docker pull $REPOSITORY_URI:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
             docker stop my-react-app-container || true
             docker rm my-react-app-container || true
-            docker run -d --name my-react-app-container -p 80:80 $REPOSITORY_URI:latest
+            docker run -d --name my-react-app-container -p 80:3000 ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
