--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,12 +28,20 @@ jobs:
           docker build -t ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
 
+      - name: Install SSH client
+        run: sudo apt-get install -y openssh-client
+
+      - name: Add SSH key
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > shivacha.Ai.pem
+          chmod 600 shivacha.Ai.pem
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.AWS_EC2_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
             docker stop my-react-app-container || true
