--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,14 +34,14 @@ jobs:
       - name: Add SSH key
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > shivacha.Ai.pem
-          chmod 600 shivacha.Ai.pem
+          chmod 777 shivacha.Ai.pem
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ssh_key.pem
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/my-react-app:latest
             docker stop my-react-app-container || true
