--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Add SSH key
         run: |
-          echo "${{ secrets.EC2_SSH_KEY }}" > shivacha.Ai.pem
-          chmod 400 shivacha.Ai.pem
+          echo "${{ secrets.EC2_SSH_KEY }}" 
+          
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
