--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,8 @@ jobs:
 
       - name: Add SSH key
         run: |
-          echo "${{ secrets.EC2_SSH_KEY }}"  > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.EC2_SSH_KEY }}"  > ~/.ssh/sshmanish
+          chmod 600 ~/.ssh/sshmanish
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
